# pygent

./: .gitignore  README.md  RELEASE_v0.1.1.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: API.md  ARCHITECTURE.md  README_tools_schema.md  session.md  tools_openai_api.json  tools_openai_schema.json
examples/: __init__.py  mcp_agent_example.py  multi_session_agent.py  react_agent.py
pygent/: __init__.py
pygent/agent/: __init__.py  base.py
pygent/agent/common/: __init__.py
pygent/common/: base.py
pygent/context/: __init__.py  base.py
pygent/llm/: __init__.py  base.py  ollama_client.py  openai_client.py  requests_client.py
pygent/message/: __init__.py  adapters.py  base.py
pygent/module/: __init__.py  base.py
pygent/module/plan/: __init__.py  base.py  in_memory_plan.py
pygent/session/: __init__.py  base.py
pygent/toolkits/: __init__.py  bash.py  file_operations.py  path_utils.py  run_terminal_cmd.py  web_fetch.py  web_search.py
scripts/: smoke_test.py
tests/: __init__.py  mcp_test_server.py  test_agent_tool_integration.py  test_api_compat.py  test_common_base.py  test_context_base.py  test_deepseek.py  test_file_toolkits.py  test_get_all_tools.py  test_in_memory_plan.py  test_mcp_sse_client.py  test_mcp_stdio_client.py  test_mcp_tool_manager.py  test_message_adapters.py  test_message_chunk.py  test_ollama_client.py  test_openai_client.py  test_react_agent.py  test_requests_client.py  test_session.py  test_terminal_toolkits.py  test_tool.py  test_tool_manager_terminal.py  test_web_toolkits.py
(+9 files in other folders)
