[project]
name = "pygent-ai"
version = "0.1.1"
description = "A Python framework for building LLM-powered agents with modular state, tools, and MCP support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
